--- a/app/src/main/res/layout/activity_broadcast_receiver_example.xml
+++ b/app/src/main/res/layout/activity_broadcast_receiver_example.xml
@@ -9,4 +9,11 @@
     android:id="@+id/tvShowMsg"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content" />
+
+    <FrameLayout
+        android:id="@+id/connectivity_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </FrameLayout>
 </RelativeLayout>
