--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -46,6 +46,7 @@
             android:id="@+id/input_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:passwordToggleEnabled="true"
             app:errorEnabled="true">
 
             <android.support.design.widget.TextInputEditText
@@ -60,6 +61,7 @@
             android:id="@+id/input_confirmPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:passwordToggleEnabled="true"
             app:errorEnabled="true">
 
             <android.support.design.widget.TextInputEditText
